# LearningProject

./: CMakeLists.txt  git.gitignore
src/: myConstants.cpp  myFunction.cpp  myMain.cpp  testFunction.cpp
src/global_classes/: Numbers.cpp  Numbers.h  Point.cpp  Point.h  Point3D.cpp  Point3D.h  Vector3D.cpp  Vector3D.h
src/includes/: myClass.h  myConstants.h  myEnums.h  myFunction.h  myStruct.h  structMain.h  testFunction.h
